# create_image_classifier

./: .gitignore  README.md  pyproject.toml  sandbox.ipynb  train_infer.ipynb
src/: convert_onnx.py  dataset.py  model.py  train.py  transform.py  utils.py
src/models/: effinetv2.py
