[project]
name = "create-img-clf"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "marumarukun", email = "cheriera.0310@gmail.com" }
]
dependencies = [
    "ipykernel>=6.29.4",
    "Pillow>=10.2.0",
    "torch>=2.2.2",
    "lightning>=2.2.1",
    "torchvision>=0.17.2",
    "onnx>=1.16.0",
    "onnxruntime>=1.17.1",
    "matplotlib>=3.7.5",
    "timm>=0.9.16",
    "onnxsim>=0.4.36",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "create_img_clf:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/create_img_clf"]
