[tool.poetry]
name = "create-img-clf"
version = "0.1.0"
description = ""
authors = ["marumarukun"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
ipykernel = "^6.29.4"
torch = [{ version = ">=1.12+cu116", markers = "sys_platform == 'win32'" },
         { version = "^2.2.2", markers = "sys_platform == 'darwin'" }]
torchvision = [{ version = ">=0.13.0+cu116", markers = "sys_platform == 'win32'" },
               { version = "^0.17.2", markers = "sys_platform == 'darwin'" }]
pillow = "^10.2.0"
lightning = "^2.2.1"
onnx = "^1.16.0"
onnxruntime = "^1.17.1"
matplotlib = "^3.8.3"
timm = "^0.9.16"
onnxsim = "^0.4.36"
tqdm = "^4.66.2"
albumentations = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
